comment replying to username with overflow fixed. Added remove button to let user remove the 'repying to' username

--- a/src/app/feeds-frame/recommended-feeds/create-comment/create-comment.component.scss
+++ b/src/app/feeds-frame/recommended-feeds/create-comment/create-comment.component.scss
@@ -84,12 +84,22 @@
         display: flex;
         align-items: center;
         flex: auto;
-        span {
+        .reply-username-wrapper {
+            display: flex;
+            align-items: center;
             padding: 0.2rem 0.5rem;
             background: rgba($primary, 0.3);
             font-weight: 500;
             border-radius: 5px;
             max-width: 30%;
+            span {
+                cursor: pointer;
+                mat-icon {
+                    display: flex;
+                    align-items: center;
+                    font-size: 15px;
+                }
+            }
         }
         input {
             background: transparent;
